--- a/Styles.css
+++ b/Styles.css
@@ -15,3 +15,32 @@ body{
     color: #AAAAAA;
     font-size: 2EM;
 }
+div.bodyHalf{
+    width: 50%;
+    height: 500px;
+    float: left;
+    background-color: #FFFFFF;
+    color: #FFFFFF;
+}
+div.quarter{
+    width: 46%;
+    height: 46%;
+    margin: 10px;
+    float: left;
+    background-color: #CCCCCC;
+}
+#Footer{
+    clear: both;
+    width: 100%;
+    height: 100px;
+    background-color: #E0E0E0;
+}
+div.footBox{
+    padding: 10px;
+    width: 130px;
+    background-color: #E0E0E0;
+}
+p.footText{
+    color: #A0A0A0;
+    line-height: 0.5EM;
+}
