--- a/Styles.css
+++ b/Styles.css
@@ -4,6 +4,13 @@ body{
     padding: 0px;
 }
 #header{
+    width: 100%;
+    min-height: 10px;
+    height: 0.5%;
+    background-color: #202020;
+}
+
+#header:hover{
     background-color: #202020;
     width: 100%;
     height: 2.4EM;
