--- a/Styles.css
+++ b/Styles.css
@@ -60,3 +60,37 @@ a:active.headerLink{
     text-decoration: none;
     color: chartreuse;
 }
+td.timeinfo {
+    row-span:2 ;
+}
+#tableactivities{
+    float: left;
+}
+th,td{
+    border: 5px solid black;
+    width:12.5%;
+    height:120px;
+    text-align:center;
+    font-size: 1.6em;
+    min-width: 10px;
+    min-height: 100px;
+}
+table{
+    border-collapse: collapse;
+    width:100%;
+    height: 100%;
+    min-height: 100px;
+}
+tr:hover {background-color:#999999;}
+td.cardio{
+    background-color:#f909ef;
+}
+td.fullbody{
+    background-color:#1d09f9;
+}
+td.X-fit{
+    background-color:#f90909;
+}
+td.strength{
+    background-color:#5af909;
+}
