--- a/Styles.css
+++ b/Styles.css
@@ -17,6 +17,8 @@ body{
     margin: 0px;
     border: 0px;
     padding: 0px;
+    position:fixed;
+    top:0;
 }
 #headerText{
     font-size: 2EM;
@@ -80,6 +82,9 @@ div.quarter{
     clear: both;
     height: 80px;
     background-color: #E0E0E0;
+    position:fixed;
+    bottom:0;
+    width:100%;
 }
 div.footBox{
     padding: 10px;
