--- a/Styles.css
+++ b/Styles.css
@@ -63,6 +63,8 @@ div.bodyHalf{
     float: left;
     background-color: #FFFFFF;
     color: #FFFFFF;
+    font-family: helvetica;
+    text-decoration-color: #202020;
 }
 div.quarter{
     min-width: 280px;
@@ -72,7 +74,7 @@ div.quarter{
     margin: 10px;
     float: left;
     padding: 0;
-    border: 1px solid black;
+    border: 3px solid black;
     background-color: #CCCCCC;
 }
 #Footer{
@@ -148,3 +150,22 @@ td.cardio:hover {background-color: #ffffff;}
 td.fullbody:hover {background-color: #ffffff;}
 td.X-fit:hover {background-color: #ffffff;}
 td.strength:hover {background-color: #ffffff;}
+
+#aboutdiv{
+    min-width:200px;
+    width: 98%;
+    min-height: 200px;
+    height: 500px;
+    border: 3px solid black;
+    background-color: #EEEEEE;
+    font-family: helvetica;
+    text-decoration-color: #202020;
+    padding-left: 10px;
+
+}
+p,h1{
+    color:black;
+}
+h1{
+    text-decoration: underline;
+}
