--- a/Styles.css
+++ b/Styles.css
@@ -58,22 +58,28 @@ a.headerNavText:active{
 
 div.bodyHalf{
     width: 50%;
-    min-height: 500px;
-    max-height: 70%;
+    min-height: 200px;
+    max-height: 60%;
     float: left;
     background-color: #FFFFFF;
     color: #FFFFFF;
 }
 div.quarter{
-    min-width: 280px;
-    width: 46%;
-    min-height: 200px;
-    height: 50%;
+    /*min-width: 46%;*/
+    width: 240px;
+    min-height: 100px;
+    height: 200px;
     margin: 10px;
     float: left;
     padding: 0;
     border: 1px solid black;
     background-color: #CCCCCC;
+    type: fixed;
+}
+img.quarterImg{
+    width:100%;
+    height: 100%;
+    /*height:203.6px;*/
 }
 #Footer{
     clear: both;
@@ -107,7 +113,7 @@ a.headerLink:hover{
 }
 a.headerLink:active{
     text-decoration: none;
-    color: chartreuse;
+    color: #CCCCCC;
 }
 
 
