--- a/Styles.css
+++ b/Styles.css
@@ -57,7 +57,7 @@ a.headerNavText:active{
 
 
 div.bodyHalf{
-    width: 50%;
+    width: 49.9%;
     min-height: 200px;
     max-height: 60%;
     float: left;
@@ -67,16 +67,15 @@ div.bodyHalf{
     text-decoration-color: #202020;
 }
 div.quarter{
-    /*min-width: 46%;*/
-    width: 240px;
-    min-height: 100px;
-    height: 200px;
+    min-width: 2%;
+    width: 45%;
+    min-height: 200px;
+    height: 10%;
     margin: 10px;
     float: left;
-    padding: 0;
+    padding: 0px;
     border: 3px solid black;
-    background-color: #CCCCCC;
-    type: fixed;
+    background-color: #222222;
 }
 img.quarterImg{
     width:100%;
