--- a/Styles.css
+++ b/Styles.css
@@ -57,7 +57,7 @@ a.headerNavText:active{
 
 
 div.bodyHalf{
-    width: 49.9%;
+    width: 48%;
     min-height: 200px;
     max-height: 60%;
     float: left;
@@ -65,6 +65,20 @@ div.bodyHalf{
     color: #FFFFFF;
     font-family: helvetica;
     text-decoration-color: #202020;
+}
+#Feed{
+    width: 48%;
+    max-width: 48%;
+    min-height: 400px;
+    height: 47%;
+    margin: 10px;
+    background-color: #AAAAAA;
+    border: 3px solid black;
+
+}
+#FeedText{
+    margin: 5px;
+    font-family: helvetica;
 }
 div.quarter{
     min-width: 2%;
