--- a/Styles.css
+++ b/Styles.css
@@ -73,6 +73,7 @@ div.bodyHalf{ /*bodyHalf is used for dividing sites into halves */
     height: 47%;
     margin: 10px;
     background-color: #AAAAAA;
+    box-sizing: border-box;
     border: 3px solid black;
 
 }
@@ -88,6 +89,7 @@ div.quarter{ /*quarter divides a bodyHalf into four spaced divs, typically used 
     margin: 10px;
     float: left;
     padding: 0px;
+    box-sizing: border-box;
     border: 3px solid black;
     background-color: #222222;
 }
